More fixes: 	guessindent don't write to istep if spaces, 	lmargin limit is 1 not 2, 	add .js file type, 	allow file insert on zero width rectangle blocks,

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+- Guessindent no longer overrides istep if indendation is space.
+
+- Fix low limit of lmargin
+
 - Fix ^G in perl mode when you hit it on second brace in:
 	{\'
 	\'}
