--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,5 @@
+- Add -flowed option: adds a space after paragraph lines.
+
 - Added -no_double_quoted and -tex_comment for TeX
 
 - Added -break_symlinks option and changed -break_links option to not
