--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+- Modify configure scrips to use docdir for extra documents and
+  datadir/joe for syntax and i18n files.
+
 - Don't use bold yellow, it's bad for white screens
 
 - Fix TeX highlighter: don't highlight "
