Reload command now prompts to lose changes to modified files.  Should call it revert.

--- a/TODO
+++ b/TODO
@@ -1,5 +1,7 @@
 For JOE-3.6
 
+	file reload: allows me to fix the perforce macro
+
 	allow some form of escaping in file names
 
 	turn off utf-8 during hex display mode.  The issue is that
